--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Snowman" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Snowman" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,51 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+
+    <style name="H1">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="H2">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="H3">
+        <item name="android:fontFamily">@font/noto_bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+
+    <style name="H4">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
+    <style name="Body">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
+    <style name="Button">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="Caption1">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="Caption2">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
