--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,62 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Snowman" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Snowman" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/BlueLight30</item>
+        <item name="colorPrimaryVariant">@color/BlueDark30</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/BlueLight20</item>
+        <item name="colorSecondaryVariant">@color/BlueDark20</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+
+    <style name="H1">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="H2">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="H3">
+        <item name="android:fontFamily">@font/noto_bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+
+    <style name="H4">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
+    <style name="Body">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
+    <style name="Button">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="Caption1">
+        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="Caption2">
+        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
