--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.LoginActivity">
 
-    <ImageView
-        android:id="@+id/iv_appLogo"
-        android:layout_width="230dp"
-        android:layout_height="300dp"
-        android:src="@drawable/img_app_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="160dp"/>
+    <RelativeLayout
 
-    <ImageButton
-        android:id="@+id/btn_kakaoLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:contentDescription="@string/com_kakao_talk_chooser_text"
-        android:src="@drawable/img_kakao_login_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_appLogo" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_appLogo"
+            android:layout_width="250dp"
+            android:layout_height="350dp"
+            android:src="@drawable/img_app_logo"
+            android:layout_centerInParent="true"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_kakaoLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/com_kakao_talk_chooser_text"
+            android:src="@drawable/img_kakao_login_button"
+            android:layout_below="@id/iv_appLogo"
+            android:layout_centerHorizontal="true"
+            />
+
+
+    </RelativeLayout>
+
+
+
+</layout>
