feat: 상의 옷 입히기 구현

--- a/app/src/main/res/layout/fragment_inner.xml
+++ b/app/src/main/res/layout/fragment_inner.xml
@@ -4,49 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.vote.category.ClothesFragment">
+    tools:context=".ui.vote.category.InnerFragment">
 
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="5"
+        android:columnCount="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageButton
-            android:id="@+id/btn_long_padding"
-            android:layout_width="80dp"
-            android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/img_long_padding" />
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/img_short_padding" />
-
-        <ImageButton
-            android:layout_width="80dp"
-            android:layout_height="100dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/img_coat" />
-
-
-        <ImageButton
-            android:layout_width="80dp"
+            android:id="@+id/btn_long_shirt"
+            android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/img_long_shirt" />
 
         <ImageButton
-            android:layout_width="80dp"
+            android:id="@+id/btn_long_neat"
+            android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
