--- a/app/src/main/res/layout/fragment_muffler.xml
+++ b/app/src/main/res/layout/fragment_muffler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.vote.category.InnerFragment">
+    tools:context=".ui.vote.category.ItemFragment">
 
 
     <GridLayout
@@ -17,23 +17,24 @@
 
 
         <ImageButton
-            android:id="@+id/btn_long_shirt"
+            android:id="@+id/btn_muffler"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/selector_resource"
             android:scaleType="fitCenter"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/img_long_shirt" />
+            android:src="@drawable/img_muffler" />
 
         <ImageButton
-            android:id="@+id/btn_long_neat"
+            android:id="@+id/btn_none"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/selector_resource"
             android:scaleType="fitCenter"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/img_neat" />
+            android:src="@drawable/img_empty" />
+
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
