--- a/app/src/main/res/layout/fragment_outer.xml
+++ b/app/src/main/res/layout/fragment_outer.xml
@@ -20,25 +20,39 @@
             android:id="@+id/btn_long_padding"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_resource"
             android:scaleType="fitCenter"
+            android:clickable="true"
+            android:focusable="true"
             android:src="@drawable/img_long_padding" />
         <ImageButton
             android:id="@+id/btn_short_padding"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_resource"
             android:scaleType="fitCenter"
+            android:clickable="true"
+            android:focusable="true"
             android:src="@drawable/img_short_padding" />
 
         <ImageButton
             android:id="@+id/btn_coat"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@android:color/transparent"
+            android:background="@drawable/selector_resource"
             android:scaleType="fitCenter"
-            android:src="@drawable/img_coat" />
+            android:clickable="true"
+            android:focusable="true"             android:src="@drawable/img_coat" />
 
+        <ImageButton
+            android:id="@+id/btn_none"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/selector_resource"
+            android:scaleType="fitCenter"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/img_empty" />
 
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
