--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,17 +9,19 @@
     android:background="@drawable/img_home_background">
 
     <!-- 현재 시간대의 펭귄 코디 (디폴트 + 투표 반영) -->
+
+    <!-- 현재 시간, 기온, 날짜 -->
+
     <ImageView
         android:id="@+id/iv_currentPenguin"
-        android:layout_width="match_parent"
-        android:layout_height="669dp"
+        android:layout_width="241dp"
+        android:layout_height="427dp"
+        android:layout_marginTop="112dp"
         android:src="@drawable/img_base"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- 현재 시간, 기온, 날짜 -->
     <TextView
         android:id="@+id/tv_currentInfo"
         android:layout_width="256dp"
@@ -62,7 +64,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/img_base"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin2"
@@ -92,7 +93,6 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/img_base"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin3"
@@ -122,7 +122,6 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/img_base"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
