--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -47,7 +47,7 @@
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:scaleType="fitCenter"
-        android:src="@drawable/img_empty"
+        android:src="@drawable/img_neat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
