--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,27 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.LoginActivity"
+    android:background="@color/BlueLight10">
 
     <ImageView
         android:id="@+id/iv_appLogo"
-        android:layout_width="230dp"
-        android:layout_height="300dp"
-        android:src="@drawable/img_app_logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="228dp"
+        android:src="@drawable/app_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PengDolli"
+        android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="160dp"/>
+        app:layout_constraintBottom_toTopOf="@id/iv_appLogo"
+        android:fontFamily="@font/noto_bold"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/BlueDark30"
+        />
+
 
     <ImageButton
         android:id="@+id/btn_kakaoLogin"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/com_kakao_talk_chooser_text"
         android:src="@drawable/img_kakao_login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_appLogo" />
+        app:layout_constraintTop_toBottomOf="@id/iv_appLogo"
+        android:background="@android:color/transparent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
