--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,10 +8,25 @@
     android:layout_height="match_parent"
     android:background="@drawable/img_home_background">
 
+    <!-- 눈 내리는 애니메이션 -->
+    <com.jetradarmobile.snowfall.SnowfallView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:snowflakesNum="50"
+        app:snowflakeAlphaMin="150"
+        app:snowflakeAlphaMax="255"
+        app:snowflakeAngleMax="5"
+        app:snowflakeSizeMin="4dp"
+        app:snowflakeSizeMax="20dp"
+        app:snowflakeSpeedMin="1"
+        app:snowflakeSpeedMax="5"
+        app:snowflakesFadingEnabled="false"
+        app:snowflakesAlreadyFalling="true"
+        app:snowflakeImage="@drawable/img_snowball"
+        android:visibility="invisible"
+        />
+
     <!-- 현재 시간대의 펭귄 코디 (디폴트 + 투표 반영) -->
-
-    <!-- 현재 시간, 기온, 날짜 -->
-
     <ImageView
         android:id="@+id/iv_currentPenguin"
         android:layout_width="241dp"
@@ -22,6 +37,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 현재 시간, 기온, 날짜 -->
     <TextView
         android:id="@+id/tv_currentInfo"
         android:layout_width="256dp"
