--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/BlueLight20"
+    android:background="@drawable/img_home_background"
     tools:context=".ui.archive.ArchiveFragment">
 
    <androidx.recyclerview.widget.RecyclerView
