--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,6 +57,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_location" />
     <ImageView
+        android:id="@+id/iv_current_hand"
+        android:layout_width="241dp"
+        android:layout_height="427dp"
+        android:src="@drawable/img_empty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+    <ImageView
         android:id="@+id/iv_current_topWear"
         android:layout_width="241dp"
         android:layout_height="427dp"
